--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
 <properties>
     <java.version>1.8</java.version>
-    <vertx.version>3.5.0</vertx.version>
-    <kotlin.version>1.2.31</kotlin.version>
+    <vertx.version>3.6.2</vertx.version>
+    <kotlin.version>1.3.10</kotlin.version>
     <main.class>io.vertx.core.Launcher</main.class>
     <main.verticle>com.zhku.MainVerticle</main.verticle>
 </properties>
@@ -26,6 +26,12 @@
     <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-web</artifactId>
+        <version>${vertx.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-mqtt</artifactId>
         <version>${vertx.version}</version>
     </dependency>
 
@@ -157,6 +163,7 @@
             <executions>
                 <execution>
                     <id>compile</id>
+                    <phase>process-sources</phase>
                     <goals> <goal>compile</goal> </goals>
                     <configuration>
                         <jvmTarget>1.8</jvmTarget>
