--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 
 <properties>
     <java.version>1.8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <vertx.version>3.6.2</vertx.version>
     <kotlin.version>1.3.10</kotlin.version>
     <main.class>io.vertx.core.Launcher</main.class>
@@ -109,6 +112,18 @@
     </dependency>
 
 
+    <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-redis-client</artifactId>
+        <version>3.5.2.CR3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-mail-client</artifactId>
+        <version>3.7.0</version>
+    </dependency>
+
 
     <!--<dependency>-->
         <!--<groupId>io.vertx</groupId>-->
@@ -121,36 +136,36 @@
 <build>
     <plugins>
         <!--scala的编译器-->
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>add-source</id>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>add-source</goal>
-                    </goals>
-                    <configuration>
-                        <sources>
-                            <source>${project.basedir}/src/main/scala</source>
-                        </sources>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>add-test-source</id>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>add-test-source</goal>
-                    </goals>
-                    <configuration>
-                        <sources>
-                            <source>${project.basedir}/src/test/scala</source>
-                        </sources>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
+        <!--<plugin>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>build-helper-maven-plugin</artifactId>-->
+            <!--<executions>-->
+                <!--<execution>-->
+                    <!--<id>add-source</id>-->
+                    <!--<phase>generate-sources</phase>-->
+                    <!--<goals>-->
+                        <!--<goal>add-source</goal>-->
+                    <!--</goals>-->
+                    <!--<configuration>-->
+                        <!--<sources>-->
+                            <!--<source>${project.basedir}/src/main/scala</source>-->
+                        <!--</sources>-->
+                    <!--</configuration>-->
+                <!--</execution>-->
+                <!--<execution>-->
+                    <!--<id>add-test-source</id>-->
+                    <!--<phase>generate-sources</phase>-->
+                    <!--<goals>-->
+                        <!--<goal>add-test-source</goal>-->
+                    <!--</goals>-->
+                    <!--<configuration>-->
+                        <!--<sources>-->
+                            <!--<source>${project.basedir}/src/test/scala</source>-->
+                        <!--</sources>-->
+                    <!--</configuration>-->
+                <!--</execution>-->
+            <!--</executions>-->
+        <!--</plugin>-->
 
         <plugin>
             <groupId>net.alchim31.maven</groupId>
